--- a/less/essential/plugins.less
+++ b/less/essential/plugins.less
@@ -3,8 +3,16 @@
 /* @group Collapsed Topics */
 
 body.format-topcoll { // A more specific selector than Collapsed Topics styles so will override without 'important' regardless of style inclusion order.
-    .course-content ul.ctopics li.section.main {
-        padding-bottom: 20px;
+    .course-content ul.ctopics li.section {
+        &.main {
+            padding-bottom: 20px;
+        }
+        .content .toggle a h3 {
+            color: inherit;
+            &:hover {
+                color: inherit;
+            }
+        }
     }
 }
 
